--- a/src/app/profiles/Administrador/administrador-doctor/administrador-doctor.component.html
+++ b/src/app/profiles/Administrador/administrador-doctor/administrador-doctor.component.html
@@ -76,6 +76,6 @@
   </form>
 </div>
 
-<app-cards [datos]="cards" (id)="getDoctor($event)"></app-cards>
+<app-cards [datos]="cards"></app-cards>
 <br><br>
 
