--- a/src/app/profiles/Doctor/doctor-historial/doctor-historial.component.html
+++ b/src/app/profiles/Doctor/doctor-historial/doctor-historial.component.html
@@ -100,3 +100,10 @@
 <hr>
 <app-cards [datos]="cardsArchivado" (id)="getHistorial($event)"></app-cards>
 <br><br>
+
+<div class="container-fluid">
+  <h4>Casos Compartidos</h4>
+</div>
+<hr>
+<app-cards [datos]="cardsCompartido" (id)="getHistorial($event)"></app-cards>
+<br><br>
