--- a/src/app/components/share/nav/nav.component.html
+++ b/src/app/components/share/nav/nav.component.html
@@ -4,7 +4,8 @@
   <div class="collapse navbar-collapse ml-2" id="navbarSupportedContent">
       <ul class="navbar-nav">
           <li *ngFor="let ruta of rutas" class="nav-item" routerLinkActive="active">
-              <a class="nav-link" [routerLink]="[ruta.router]">{{ruta.text}}<span class="sr-only">(current)</span></a>
+              <a *ngIf="ruta.routerid === 'vacio'" class="nav-link" [routerLink]="[ruta.router]">{{ruta.text}}<span class="sr-only">(current)</span></a>
+              <a *ngIf="ruta.routerid != 'vacio'" class="nav-link" [routerLink]="[ruta.router, ruta.routerid]">{{ruta.text}}<span class="sr-only">(current)</span></a>
           </li>
       </ul>
   </div>
