--- a/src/app/profiles/Administrador/administrador-secretario/administrador-secretario.component.html
+++ b/src/app/profiles/Administrador/administrador-secretario/administrador-secretario.component.html
@@ -55,7 +55,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label>Correo Electronico</label>
-        <input type="text" class="form-control" placeholder="ejemplo@hotmail.com" formControlName="correo" [class.is-invalid]="correoValid">
+        <input type="text" class="form-control" [email]="true" placeholder="ejemplo@hotmail.com" formControlName="correo" [class.is-invalid]="correoValid">
       </div>
       <div class="form-group col-md-6">
         <label>Contraseña</label>
